# learn_fastapi

./: database.py  db.sqlite3  main.py  models.py  pyproject.toml  schemas.py
routers/: auth.py  todos.py
